--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.0.1",
     "vue-axios": "^1.2.2",
     "vue-router": "^2.0.3",
-    "vuex": "^2.0.1"
+    "vuex": "^2.0.1",
+    "zhihu-particle": "^0.0.9"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
