--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "axios": "^0.15.3",
     "babel-polyfill": "*",
     "core-js": "^2.4.1",
-    "element-ui": "^1.2.9",
+    "element-ui": "^1.3.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "nprogress": "^0.2.0",
-    "vue": "^2.1.0",
+    "vue": "2.2.6",
     "vue-axios": "^1.2.2",
-    "vue-router": "^2.0.3",
-    "vuex": "^2.1.0",
+    "vue-router": "2.3.0",
+    "vuex": "2.2.1",
     "zhihu-particle": "^0.0.9"
   },
   "devDependencies": {
@@ -66,9 +66,9 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.0",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.0",
+    "vue-loader": "11.3.4",
+    "vue-style-loader": "2.0.0",
+    "vue-template-compiler": "2.2.6",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
