--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     ["env", { "modules": false }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime","transform-vue-jsx"],
   "comments": false,
   "env": {
     "test": {
@@ -12,12 +12,3 @@
     }
   }
 }
-/*{
-  "presets": ["es2015"],
-  "plugins": ["./index"],
-  "ignore": ["node_modules"]
-}*/
-/*{
-"presets": ["es2015"],
-"plugins": ["transform-vue-jsx"]
-}*/
