--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^0.15.3",
     "babel-polyfill": "*",
     "core-js": "^2.4.1",
+    "d3": "^4.9.1",
     "element-ui": "^1.3.7",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "nprogress": "^0.2.0",
+    "validate.js": "^0.11.1",
     "vue": "^2.3.3",
     "vue-axios": "^1.2.2",
     "vue-router": "^2.3.1",
