--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-polyfill": "*",
     "core-js": "^2.4.1",
     "d3": "^4.9.1",
-    "element-ui": "^1.3.7",
+    "element-ui": "^1.4.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
@@ -82,9 +82,5 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
