--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "nprogress": "^0.2.0",
-    "vue": "^2.4.2",
+    "vue": "2.5.11",
     "vue-router": "^2.3.1",
     "vuex": "2.2.1",
     "zhihu-particle": "^0.0.9"
@@ -70,7 +70,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-template-compiler": "2.5.11",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.10.0",
