--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "copy": "^0.3.0",
     "core-js": "^2.4.1",
     "element-ui": "^1.4.1",
+    "file-saver": "^1.3.8",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "nprogress": "^0.2.0",
     "vue": "2.5.11",
     "vue-router": "^2.3.1",
     "vuex": "2.2.1",
+    "xlsx": "^0.12.8",
     "zhihu-particle": "^0.0.9"
   },
   "devDependencies": {
